--- a/src/main/webapp/WEB-INF/jspf/directive/page.jspf
+++ b/src/main/webapp/WEB-INF/jspf/directive/page.jspf
@@ -1,6 +1,2 @@
-<%--===========================================================================
-Page directive. Sets the content type and encoding.
-Encoding of the response: UTF-8
-Encoding of this JSP page: UTF-8
-===========================================================================--%>
 <%@ page contentType="text/html; charset=UTF-8" pageEncoding="UTF-8" %>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
