--- a/src/main/webapp/WEB-INF/jspf/directive/taglib.jspf
+++ b/src/main/webapp/WEB-INF/jspf/directive/taglib.jspf
@@ -1,5 +1,5 @@
 <%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
 
 <%@ taglib uri="http://java.sun.com/jsp/jstl/functions" prefix="fn" %>
-
+<%@ taglib prefix="fmt" uri="http://java.sun.com/jsp/jstl/fmt" %>
 <%@ taglib prefix="util" tagdir="/WEB-INF/tags" %>
